fix(dialog): support dark mode properly

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -21,7 +21,7 @@
  */
 
 :host {
-    --dialog-background-color: rgb(var(--contrast-100));
+    --dialog-background-color: var(--lime-elevated-surface-background-color);
     --header-heading-color: var(--dialog-heading-title-color);
     --header-subheading-color: var(--dialog-heading-subtitle-color);
     --header-supporting-text-color: var(--dialog-heading-supporting-text-color);
@@ -50,6 +50,11 @@ $responsive-body-padding: 3vw; // 3% of viewport's width
             }
         }
     }
+
+    .mdc-dialog__scrim {
+        background-color: rgba(var(--color-black), 0.4);
+    }
+
     .mdc-dialog__container {
         height: 100%;
         width: var(--dialog-width, auto);
@@ -67,6 +72,7 @@ $responsive-body-padding: 3vw; // 3% of viewport's width
     }
 
     .mdc-dialog__content {
+        color: var(--mdc-theme-on-surface);
         padding: var(
                 --dialog-padding-top-bottom,
                 min(1.5rem, $responsive-body-padding)
